# rayzer

./: Cargo.toml  readme.md
src/: camera.rs  main.rs  ray.rs  render.rs  utils.rs  vector.rs
src/hittables/: aabb.rs  bvh.rs  hittable.rs  mod.rs  moving_sphere.rs  sphere.rs
src/materials/: glass.rs  lambert.rs  material.rs  metal.rs  mod.rs  utils.rs
