[package]
name = "rayzer"
version = "0.1.0"
authors = ["Jonathan Li <30177086+MonliH@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"
indicatif = "0.15.0"
rand = "0.8.3"
num_cpus = "1.0"
lazy_static = "1.4"
